@@ -1,7 +1,7 @@
 #  Makefile for hexer version 0.1.6
 
 #  Copyright (c) 1995,1996 Sascha Demetrio
-#  Copyright (c) 2009 Peter Pentchev
+#  Copyright (c) 2009, 2010 Peter Pentchev
 
 #  It might be helpful to read the `README'-file first.
 
