@@ -9,6 +9,7 @@ Change log for hexer, the multi-view binary editor
 	    problem ever since I first looked at the hexer source code and
 	    tried to build it with a raised compiler warning level :)
 	- add a TODO list inspired by the cppcheck results
+	- bump the year of my copyright notice on files changed in 2010
 
 0.1.5	2009/09/04
 	- taken over by Peter Pentchev <roam@ringlet.net>
